# fireguardctl

./: README.md  dev-requirements.in  fireguard.db  gunicorn.conf.py  pyproject.toml  pyproject.toml.save  requirements.txt
app/: database.py  main.py  models.py  routes.py
app/templates/: dashboard.html
fireguardctl/: cli.py
