[project]
name = "fireguardctl"
version = "0.1.0"
description = "Tactical CLI for Fireguard Infrastructure Status Reporting"
authors = [{ name = "Shawn Andrews", email = "andrews.shawn@gmail.com" }]
readme = ""
license = "MIT"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.scripts]
fireguardctl = "fireguardctl.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fireguardctl"]
